examples/test/testpolicy12965.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12965
  namespace: namespace264
spec:
  podSelector:
    matchLabels:
      key46: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value14
          key25: value0
          key33: value32
      podSelector:
        matchLabels:
          key41: value49
          key8: value1
          key31: value22
